@@ -30,14 +30,11 @@
 2. Quality=3 for mirror+shadows? Couldn't be in bitmap only mode
 4. "latex on" option ?!?
 
-5. Add mgl_progres(int val, void *par); -- to show progress of sth. Negative val -- set range [0,-val]. Add MGL command 'progress val'.
 6. Custom dialog in QMathGL
 7. Add "text3d x y z lx ly lz nx ny nz 'txt' ['stl'='' depth=0.1 depth2=nan]"
 8. Add "mgl_zoomview(int x, int y)" for zoom circle/square around image point {x,y}
 9. Mask in EPS/SVG
-10. Animation and custom dialog in mglview
 11. Animation in UDAV from ##c, ##a + remove old entries at "Put to script" (the same in mgllab)
-12. Set initial arguments from ##d everywhere (including mglconv)
 16. Check Title "size" -- see 'primitives' sample
 17. Optimize '.' style of Flow.
 
@@ -99,7 +96,7 @@ D. Docs about JS interface
 	'b' for check box (parameter is "ini"; also understand "on"=1), 
 	'c' for choice (parameters are possible choices).
 Now, it work in mgllab only. Note, only single entry per line is allowed.
-11. Docs about 'progress'
+11. Docs about 'progress val max'
 
 ZZ. Update time.texi {before release!!!}
 
